--- a/README.org
+++ b/README.org
@@ -15,6 +15,11 @@
 #+CREATOR: Emacs 26.1 (Org mode 9.1.13)
 
 
+#+BEGIN_EXAMPLE
+Build status: [![Build Status](https://travis-ci.org/palikar/code_manager.svg?branch=master)](https://travis-ci.org/palikar/code_manager)
+#+END_EXAMPLE
+
+
 * Abstract
 This is my personal tool now for managing my github repositories, some system software that I use and pretty much everything that can be downloaded, compiled locally and then installed on a Debian based Linux system. Through this utility one can quickly download and install random things from all over the internet. I've always wanted some small program that would allow me to quickly bring my github repositories on my local machine so I end it up writing this in my spare time. The program is focused on automation but also on flexibility in the installation process. A lot of software is compiled and installed in some standard way but there are also things that are a little bit trickier. The utility - named appropriately ~code_manager~ aims to provide a unified interface for the installation process of all types of software -- the trickier kind included. 
 
