Adding a little bit more documentation

--- a/README.org
+++ b/README.org
@@ -72,8 +72,8 @@ The file contains all of the relevant information needed to install a certain pa
 #+BEGIN_SRC json
 {
     "packages_list": [
-        "<list of names for packages in group 0>",
-        "<list of names for packages in group 1>",
+        "<list of names of packages in group 0>",
+        "<list of names of packages in group 1>",
     ],
     "debian_packages":[
         "<list of names for debian packages>"
@@ -88,7 +88,7 @@ The file contains all of the relevant information needed to install a certain pa
             "command" : "<shell command>" ,
             "reinstall_command": "<shell command>",
             "cmake_args" : "<extra arguments for cmake>",
-            "make_args" : "<extra arguments for make (for example -j4)>",
+            "make_args" : "<extra arguments for make (for example \"-j4\")>",
             "dependencies": "<list of other packages>",
             "deb_packages": "<list of debian packages>"
     },
@@ -108,7 +108,7 @@ The file contains all of the relevant information needed to install a certain pa
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
 | ~URL~               | A URL that should be either a git repository or some sort <br> of a file depending on the download method.                               |
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
-| ~install~           | Compilation\Installation method <br> This could be ~cmake~ \ ~command~ \ ~script~                                                        |
+| ~install~           | Compilation\Installation method <br> This could be ~cmake~ \ ~command~ \ ~script~ \ <br> ~setup.py~ \ ~emacs~                            |
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
 | ~script~            | The script must be available <br> in ~~/.config/code_manager/install_scripts~                                                            |
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
@@ -121,6 +121,10 @@ The file contains all of the relevant information needed to install a certain pa
 | ~cmake_args~        | Command line arguments that will be added to the ~cmake~ <br> command.                                                                   |
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
 | ~make_args~         | Command line arguments that will be added to the ~make~ <br> command.                                                                    |
+|---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
+| ~setup_args~        | Command line arguments that will be added to the ~python setup.py install~ <br> command.                                                 |
+|---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
+| ~el_files~          | ~.el~ files to be included in your Emacs configuration.                                                                                  |
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
 | ~dependencies~      | A list of other packages that are required for the<br> current package. Those will be installed <br> before the package is installed.    |
 |---------------------+------------------------------------------------------------------------------------------------------------------------------------------|
@@ -137,8 +141,24 @@ make <make_args>
 sudo make install
 cd ..
 #+END_SRC
-- ~command~ - just execute the shell command given in ~command~.
+- ~command~ - just execute the shell command given in the ~command~ field.
 - ~script~ - execute the install script given in ~script~. Explanation on install scripts can be found in the last section.
+- ~setup.py~ - installs the project with calling ~python setup.py install~ in the root directory.
+- ~emacs~ - this will find your Emacs init file (=~/.emacs= or =~/.emacs.d/init.el=) and will include e separate file in it. The new file will on its side include the files from every package installed by =the code_manager=. The files from the package to be included are specified with the field ~el_files~.
+*** Installation type specific fields
+As seen above, some of the installation types require some additional fields to be present in the package object. Here we conveniently specify them all.
+- ~cmake~
+  + ~cmake_args~ - Optional
+  + ~make_args~ - Optional
+- ~emacs~
+  + ~el_files~ - Optional
+- ~setup.py~
+  + ~setup_args~ - Optional
+- ~script~
+  + ~script_args~ - Optional
+- ~command~
+
+*** Examples
 
 
 
@@ -186,9 +206,11 @@ The majority of the arguments are self-explanatory. The following table presents
 | ~--install <packages>~  | A list of packages to be installed by the utility.<br> Each package must be present in proper format in the ~pacakges.json~ file. |
 |-------------------------+-----------------------------------------------------------------------------------------------------------------------------------|
 | ~--install-all <group>~ | A group number (as specified in ~pacakges.json~). All of the packages in the coresponding group will be installed.                |
+|-------------------------+-----------------------------------------------------------------------------------------------------------------------------------|
 
 
 ~--reinstall~ and ~--reinstall-all~ function analogously.
+
 * Installation scripts
 If the installation type of a package is set to ~script~, a custom user defined script will be used for the compilation/installation of a package. All of the install scripts must be put in the ~~/.config/code_manager/install_scripts~ folder. Those custom install scripts are a nice way making the whole utility as flexible as possible. If the specific piece of software you want to manage through ~code-manager~ has a long and tedious non standard way of compiling/installing, you can abstract all of that away in a shell-script file.
 \\
